--- a/plugin.xml
+++ b/plugin.xml
@@ -72,14 +72,19 @@
         <resource-file src="src/android/libs/tslocationmanager" target="../../libs/tslocationmanager" />
 
         <source-file src="src/android/CDVBackgroundGeolocation.java" target-dir="src/com/transistorsoft/cordova/bggeo" />
-
+	
+	<config-file target="res/xml/config.xml" parent="/*">
+            <feature name="BackgroundGeolocation">
+                <param name="android-package" value="com.transistorsoft.cordova.bggeo.CDVBackgroundGeolocation"/>
+            </feature>
+        </config-file>
+	    
         <config-file target="/manifest/application" parent="app/src/main/AndroidManifest.xml">
             <meta-data
 			android:name="com.transistorsoft.locationmanager.license_key"
-			android:name="4bbb513c013111eae951647fd4f9e79f127fce6f7a00e9d327db9ea2a053a0df"
-			/>
-            
+			android:name="4bbb513c013111eae951647fd4f9e79f127fce6f7a00e9d327db9ea2a053a0df"/>
         </config-file>
+	   
      </platform>
 
      <!-- Browser (mock) -->
