--- a/plugin.xml
+++ b/plugin.xml
@@ -82,7 +82,7 @@
         <config-file target="/manifest/application" parent="app/src/main/AndroidManifest.xml">
             <meta-data
 			android:name="com.transistorsoft.locationmanager.license_key"
-			android:name="4bbb513c013111eae951647fd4f9e79f127fce6f7a00e9d327db9ea2a053a0df"/>
+			android:value="4bbb513c013111eae951647fd4f9e79f127fce6f7a00e9d327db9ea2a053a0df"/>
         </config-file>
 	   
      </platform>
